fsp/trunk/tests/pluto.fsp.out

    > Current logic: intuitionistic sequent calculus.
      

    > Current logic: intuitionistic sequent calculus.
      

    > Current logic: minimal intuitionistic sequent calculus.
      
fsp < fsp < fsp < 
    > A,B,C,D defined.
      
fsp < Line 5, character 1:
.Parse error: syntactical analysis.
