fsp/trunk/tests/pluto.fsp
lj. minimal.

(* fully bottom-up *)
declare A,B,C,D : bool.
goal (A -> (A -> B) -> (A -> C) -> (B -> C -> D) -> D).
elim a.
elim ab.
elim ac.
elim bcd.
cut (A) d.
axiom.
cut (A -> B) a2.
axiom.
elim.
axiom.
cut (A -> C) b.
axiom.
elim.
axiom.
cut (B -> C -> D) c.
axiom.
elim.
axiom.
elim.
axiom.
axiom.
export natural language.
checkout proof term isabelle.
discard.
